--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,6 @@ body {
   padding: 0;
   text-align: center;
   width: 100px;
-  image-orientation: flip;
 }
 
 
@@ -67,4 +66,9 @@ body {
   background-color: rgb(177, 123, 177);
   box-shadow: 0 3px #d2cfcf;
   transform: translateY(4px);
+}
+.status{
+  color: rgb(30, 7, 13);
+  margin: 10px;
+  text-align: center;
 }
